--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -54,33 +54,18 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/appt:${{ github.sha }}
   Deploy:
-    name: Deploy
     runs-on: ubuntu-latest
     needs:
-      - build
+      - Build
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@13d241b293754004c80624b5567555c4a39ffbe3
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Fill in the new image ID in the Amazon ECS task definition
-        id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@97587c9d45a4930bf0e3da8dd2feb2a463cf4a3a
-        with:
-          task-definition: ${{ env.ECS_TASK_DEFINITION }}
-          container-name: ${{ env.CONTAINER_NAME }}
-          image: ${{ secrets.DOCKER_HUB_USERNAME }}/app4test:${{ github.sha }}
-
-      - name: Deploy Amazon ECS task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@de0132cf8cdedb79975c6d42b77eb7ea193cf28e
-        with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: ${{ env.ECS_SERVICE }}
-          cluster: ${{ env.ECS_CLUSTER }}
-          wait-for-service-stability: true
+      - name: Deploy to EC2 container
+        run: |
+          echo "${{ secrets.AWS_EC2_PRIVATE_KEY  }}" > private_key.pem
+          chmod 400 private_key.pem
+          ssh -o "StrictHostKeyChecking=no" -i "private_key.pem" ${{ secrets.AWS_EC2_USERNAME  }}@${{ secrets.AWS_EC2_HOSTNAME  }} ' 
+          whoami
+          sudo docker image rm $(sudo docker images -q)
+          sudo docker kill appt
+          sudo docker container rm appt
+          sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/appt:${{ github.sha }}
+          sudo docker run -d -p 5000:5000 --name appt ${{ secrets.DOCKER_HUB_USERNAME }}/appt:${{ github.sha }} '
